Pushed string resource, reorganized files, Sorry Robino :(

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,16 +18,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Defuncts.DefunctDetailActivity">
+        <activity android:name=".Activities.ScheduleActivity">
+
         </activity>
-        <activity android:name=".EasyScanActivity">
+        <activity android:name=".Activities.Defuncts.DefunctDetailActivity">
+        </activity>
+        <activity android:name=".Activities.EasyScanActivity">
         </activity>
     </application>
 
