Added easyscan to menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         </activity>
         <activity android:name=".Activities.EasyScanActivity">
         </activity>
+        <activity android:name=".Activities.Booking.BookingMakeActivity">
+        </activity>
     </application>
 
 </manifest>
