--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         </activity>
         <activity android:name=".Activities.Booking.BookingMakeActivity">
         </activity>
+        <activity android:name=".Activities.Defuncts.DefunctMakeActivity">
+
+        </activity>
     </application>
 
 </manifest>
