--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,22 +21,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainActivity">
+        <activity android:name=".Activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.ScheduleActivity">
+        <activity android:name=".Activities.MainActivity">
 
         </activity>
-        <activity android:name=".Activities.Defuncts.DefunctDetailActivity">
-        </activity>
-        <activity android:name=".Activities.EasyScanActivity">
-        </activity>
-        <activity android:name=".Activities.Booking.BookingMakeActivity">
-        </activity>
+        <activity android:name=".Activities.ScheduleActivity"></activity>
+        <activity android:name=".Activities.Defuncts.DefunctDetailActivity"></activity>
+        <activity android:name=".Activities.EasyScanActivity"></activity>
     </application>
 
 </manifest>
