--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.3'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.3'
 
+    //Required for google login
+    compile 'com.google.android.gms:play-services-auth:15.0.1'
+
     // Required for local unit tests (JUnit 4 framework)
     testCompile 'junit:junit:4.12'
 
