--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,17 +21,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.LoginActivity">
+        <activity android:name=".Activities.Login.LoginActivity">
         </activity>
-        <activity android:name=".Activities.MainActivity"></activity>
-        <activity android:name=".Activities.ScheduleActivity"></activity>
+        <activity android:name=".Activities.Main.MainActivity"></activity>
+        <activity android:name=".Activities.Schedule.ScheduleActivity"></activity>
         <activity android:name=".Activities.Defuncts.DefunctDetailActivity"></activity>
-        <activity android:name=".Activities.UserDetailsActivity"></activity>
-        <activity android:name=".Activities.EasyScanActivity"></activity>
+        <activity android:name=".Activities.UserDetails.UserDetailsActivity"></activity>
+        <activity android:name=".Activities.EasyScan.EasyScanActivity"></activity>
         <activity android:name=".Activities.Booking.BookingMakeActivity"></activity>
         <activity android:name=".Activities.Defuncts.DefunctMakeActivity" />
         <activity
-            android:name=".Activities.GoogleLoginActivity"
+            android:name=".Activities.Login.GoogleLoginActivity"
             android:label="@string/title_activity_google_login"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
